fix(neo): styling glitches for wrapped buttons fixed
related issue https://github.com/SeleniumHQ/selenium-ide/issues/572

--- a/packages/selenium-ide/src/neo/components/Test/style.css
+++ b/packages/selenium-ide/src/neo/components/Test/style.css
@@ -14,7 +14,7 @@
   padding-left: 11px;
 }
 
-.test .name > span {
+.test .name > .title {
   flex-grow: 1;
   text-overflow: ellipsis;
   white-space: nowrap;
