--- a/packages/selenium-ide/src/neo/components/ToolBar/style.css
+++ b/packages/selenium-ide/src/neo/components/ToolBar/style.css
@@ -5,7 +5,7 @@
   border-bottom: 1px solid #f3f3f3;
 }
 
-.toolbar > button {
+.toolbar .btn-action {
   margin: 2px 7px;
 }
 
